--- a/src/styles/pages/_registerPage.scss
+++ b/src/styles/pages/_registerPage.scss
@@ -19,11 +19,29 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        grid-gap: 15px;
-        gap: 15px;
+        grid-gap: 35px;
+        gap: 35px;
         .single-input {
             display: flex;
             flex-direction: column;
+            position: relative;
+            p {
+                color: $brand-white;
+                margin-bottom: 5px;
+                font-size: 14px;
+                letter-spacing: 1px;
+                font-weight: 600;
+                &::after {
+                    content: '*';
+                    color: $alert;
+                    margin-left: 4px;
+                }
+            }
+            .form-error {
+                position: absolute;
+                bottom: -25px;
+                color: $alert;
+            }
             input {
                 padding: 8px 20px;
                 font-size: 14px;
